--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
     background-color: #1c1c1c;
     color: #f2f2f2;
+    overflow: hidden;
 }
 
 h1 {
@@ -73,9 +74,31 @@ input[type="button"]:hover {
 }
 
 /* Estilos para dispositivos móveis */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1000px) {
     body, html {
       height: 100%;
+    }
+  
+    form {
+      max-width: 100%;
+      width: 90%;
+      margin-top: 50%;
+      transform: translateY(-50%);
+    }
+  
+    label {
+      font-size: 20px;
+    }
+  
+    input[type="text"] {
+      padding: 15px;
+      font-size: 20px;
+    }
+  
+    input[type="button"] {
+      padding: 15px 25px;
+      font-size: 22px;
+      max-width: 300px;
     }
   }
   
