--- a/style.css
+++ b/style.css
@@ -74,31 +74,74 @@ input[type="button"]:hover {
 }
 
 /* Estilos para dispositivos móveis */
+/* Estilos para dispositivos móveis */
 @media screen and (max-width: 1000px) {
     body, html {
       height: 100%;
     }
   
     form {
-      max-width: 100%;
-      width: 90%;
-      margin-top: 50%;
-      transform: translateY(-50%);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
+  
+    h1 {
+      text-align: center;
+      margin-top: 30px;
+      margin-bottom: 20px;
+      font-size: 24px;
     }
   
     label {
-      font-size: 20px;
+      font-size: 16px;
+      font-weight: bold;
+      margin-bottom: 5px;
     }
   
     input[type="text"] {
-      padding: 15px;
+      margin-top: 5px;
+      margin-bottom: 20px;
+      padding: 10px;
+      width: 100%;
+      max-width: 100%;
+      text-align: center;
       font-size: 20px;
+      border: none;
+      border-radius: 5px;
+      box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+      background-color: #2d2d2d;
+      color: #f2f2f2;
     }
   
     input[type="button"] {
-      padding: 15px 25px;
-      font-size: 22px;
-      max-width: 300px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      padding: 10px 20px;
+      font-size: 24px;
+      font-weight: bold;
+      cursor: pointer;
+      color: #fff;
+      background-color: #007bff;
+      border: none;
+      border-radius: 5px;
+      box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+      max-width: 100%;
+      width: 100%;
+    }
+  
+    input[type="button"]:hover {
+      background-color: #0062cc;
+    }
+  
+    #resultado {
+      margin-top: 30px;
+      font-size: 24px;
+      text-align: center;
+      color: #28a745;
+      font-weight: bold;
     }
   }
   
