--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ input[type="button"]:hover {
     form {
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: space-evenly;
       align-items: center;
       height: 100%;
     }
@@ -92,11 +92,11 @@ input[type="button"]:hover {
       text-align: center;
       margin-top: 30px;
       margin-bottom: 20px;
-      font-size: 24px;
+      font-size: 60px;
     }
   
     label {
-      font-size: 16px;
+      font-size: 50px;
       font-weight: bold;
       margin-bottom: 5px;
     }
@@ -106,6 +106,7 @@ input[type="button"]:hover {
       margin-bottom: 20px;
       padding: 10px;
       width: 100%;
+      height: 5%;
       max-width: 100%;
       text-align: center;
       font-size: 20px;
