--- a/style.css
+++ b/style.css
@@ -73,6 +73,27 @@ input[type="button"]:hover {
     font-weight: bold;
 }
 
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 30px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+    
+  footer a {
+    color: #fff;
+    text-decoration: none;
+  }
+    
+  footer a:hover {
+    text-decoration: underline;
+  }
+  
+
 /* Estilos para dispositivos móveis */
 /* Estilos para dispositivos móveis */
 @media screen and (max-width: 1000px) {
@@ -144,5 +165,18 @@ input[type="button"]:hover {
       color: #28a745;
       font-weight: bold;
     }
+
+    footer{
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 40px 0 40px 0;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        font-size: 30px;
+    }
+
+    
   }
   
